# glfwpp

./: CMakeLists.txt  README.md  getGLFW.cmake
include/: Cursor.hpp  GLFW.hpp  General.hpp  Include.hpp  Joystick.hpp  Monitor.hpp  Window.hpp
src/: Cursor.cpp  GLFW.cpp  General.cpp  Joystick.cpp  Monitor.cpp  Window.cpp
test/: CMakeLists.txt  glfwpp_window.cpp
